--- a/templates/share_view.html
+++ b/templates/share_view.html
@@ -21,7 +21,7 @@
                         {% endif %}
                     </h5>
                     <button class="btn btn-outline-primary btn-sm" onclick="showManageDialog()">
-                        <i class="bi bi-gear me-1"></i>管理
+                        <i class="bi bi-gear me-1"></i>分享管理
                     </button>
                 </div>
                 <div class="card-body">
@@ -60,8 +60,8 @@
                 </div>
                 <div class="modal-body">
                     <div class="mb-3">
-                        <label class="form-label">管理密码</label>
-                        <input type="password" class="form-control" id="inputManageCode">
+                        <label class="form-label">分享管理密码</label>
+                        <input type="password" class="form-control" placeholder="请输入生成分享链接时设置的管理密码" id="inputManageCode">
                     </div>
                     <div class="mb-3">
                         <label class="form-label">操作选项</label>
